6904967: G1: some CollectionUsageThreshold tests fail

Ensure that max and committed are non-zero (currently: at least as large as the region size).

Reviewed-by: iveresov, mchung